--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Project01_BackUp</string>
+    <string name="app_name">Travel Blog</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
     <string name="title">Vườn Thượng Uyển Bay Đà Lạt</string>
